@@ -7,6 +7,8 @@ git-annex (3.20111204) UNRELEASED; urgency=low
     yet added to git. Running the add again will now clean up this situtation.
   * Fix caching of decrypted ciphers, which failed when drop had to check
     multiple different encrypted special remotes.
+  * unannex: Can be run on files that have been added to the annex, but not
+    yet committed.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 04 Dec 2011 12:22:37 -0400
 
